# chatbot

./: .env  .gitignore  README.md  data_wrangling.ipynb  ecommerce_data.py  installed_packages.txt  main1.py  main_app.py  ollama_prompt.py  pyproject.toml  requirements.txt  sap_data.py
myprojectenv/: pyvenv.cfg
src/llm_app/: app.py  chat.py  chromadb_backend.py  chromadb_client.py  chromadb_client1.py  conversation.py  ecommerce_data.py  flask_app.py  langchain_client.py  main2.py  main3.py  main4.py  main_app.py  session_manager.py  web_chat.py
templates/: chat.html  style.css
