[project]
name = "llm_app"
version = "0.1.1"
description = "llm app to query database"
authors = [
    {name = "gsohanlal", email = "sutar.ghanshyam17@gmail.com"},
]
dependencies = [
    "ollama>=0.2.1",
    "langchain>=0.2.5",
    "chromadb>=0.5.1",
    "sqlalchemy>=2.0.30",
    "pandas>=2.2.2",
    "matplotlib>=3.9.0",
    "fastapi>=0.111.0",
    "pydantic>=2.7.4",
    "typing>=3.7.4.3",
]
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm]
distribution = true